2011-01-11

	* src/update_check.c: win32: properly set the parameter of default
	  download URL.
	* makewin32.sh: also install attachment_tool plug-in.

2011-01-07

	* libsylph/prefs_common.[ch]
	  src/compose.c
	  src/send_message.c
	  src/prefs_common_dialog.c: added an option to disable the send
	  dialog. Made the compose window insensitive on sending.

2011-01-07

	* src/send_message.[ch]: send_message_queue_all(): refactored.

2011-01-06

	* libsylph/filter.c: filter_match_rule(): optimized by modifying the
	  order of condition matching.

2011-01-06

	* src/prefs_common_dialog.c: modified 'Address auto-completion'
	  setting layout.

2011-01-06

	* src/query_search.c
	  src/prefs_filter_edit.c: made the default boolean type of query
	  search and filter condition AND.

2011-01-06

	* src/textview.c: added context menu 'Reply to this address'.

2011-01-05

	* src/inc.c: always update summary even when
	  prefs_common.open_inbox_on_inc is true (fixes wrong unread number
	  display).

2010-12-24

	* version 3.1.0beta6

2010-12-24

	* src/main.c: win32: always check if text font is loadable on startup.

2010-12-24

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2010-12-22

	* libsylph/filter.[ch]
	  libsylph/prefs_common.[ch]
	  libsylph/mbox.c
	  src/inc.[ch]
	  src/main.c
	  src/summaryview.[ch]
	  src/prefs_common_dialog.c: refactored junk filter rule management.
	  Create junk filter rule on demand.
	  Deprecated prefs_common_junk_filter_list_set().
	  Automatically select appropriate Junk folder on filtering.

2010-12-22

	* src/addressbook.c: added menu 'Add to recipient/Cc/Bcc'.

2010-12-21

	* libsylph/session.c
	  src/rpop3.c
	  src/compose.c
	  src/inc.c
	  src/passphrase.c
	  src/sigstatus.c: changed deprecated gtk_timeout_add() to
	  g_timeout_add(_full)(). Use G_PRIORITY_LOW for long timeout
	  interval (may fix slow receiving problem?).

2010-12-20

	* libsylph/prefs_common.[ch]
	  src/compose.[ch]
	  src/addressbook.c
	  src/addr_compl.c