@@ -1,3 +1,7 @@
+2011-01-14
+
+	* src/summaryview.c: preserve temporary movec/copy marks on refresh.
+
 2011-01-11
 
 	* src/update_check.c: win32: properly set the parameter of default
